# solidity

solidity_tutorial/brownie_fundme/: .coverage  Tips  brownie-config.yml  pyproject.toml
solidity_tutorial/brownie_fundme/contracts/: FundMe.sol
solidity_tutorial/brownie_fundme/contracts/test/: MockV3Aggregator.sol
solidity_tutorial/brownie_fundme/scripts/: deploy.py  helpful_scripts.py
solidity_tutorial/brownie_fundme/tests/: test_fundme.py
solidity_tutorial/brownie_simple_storage/: Tips  brownie-config.yml
solidity_tutorial/brownie_simple_storage/contracts/: OwnerSmartContract.sol
solidity_tutorial/brownie_simple_storage/scripts/: deploy.py  read_value.py
solidity_tutorial/brownie_simple_storage/tests/: test_simple_storage.py
solidity_tutorial/web3_py_simple_storage/: deploy.py  pyproject.toml
solidity_tutorial/web3_py_simple_storage/contracts/: owner_smart_contract.sol
